--- a/arsalan.assignment2.html
+++ b/arsalan.assignment2.html
@@ -60,8 +60,8 @@ background-color: rgba(255,255,255, 0.7); /* color white with alpha 0.7 */
 
 <ul>
 
-<li>Assignment one:<a href="./"> this webpage</a></li>
-<li><a HREF="file:///Users/Arsalan/Desktop/javascript-week06/API.html">Flickr</a></li>
+<li> <a href="./"> this webpage</a></li>
+<li> <a HREF="file:///Users/Arsalan/Desktop/javascript-week06/API.html">Flickr</a></li>
             
 </ul>
 </div>
