--- a/arsalan.assignment2.html
+++ b/arsalan.assignment2.html
@@ -60,8 +60,19 @@ background-color: rgba(255,255,255, 0.7); /* color white with alpha 0.7 */
 
 <ul>
 
-<li> <a href="./"> this webpage</a></li>
-<li> <a HREF="file:///Users/Arsalan/Desktop/javascript-week06/API.html">Flickr</a></li>
+<li>folder in which every file exists:<a href="./"> All file directory</a></li>
+<li>folder in which every file exists:<a href="file:///Users/Arsalan/malarsalan.github.io/javascript-week06/"> All file directory after week 6</a></li>
+<li>folder in which every file exists:<a href="file:///Users/Arsalan/malarsalan.github.io/shey_bot/"> Short term Project</a></li>
+<li>folder in which every file exists:<a href="file:///Users/Arsalan/malarsalan.github.io/long-term Project/"> Long term Project</a></li>
+<li>Assignment two:<a HREF="file:///Users/Arsalan/malarsalan.github.io/arsalan.assignment1.html">week 1</a></li>
+<li>Assignment three:<a HREF="file:///Users/Arsalan/malarsalan.github.io/arsalan.assignment2.html">week 2 'This page'</a></li>         
+<li>Assignment three:<a HREF="file:///Users/Arsalan/malarsalan.github.io/mad-lib.html">week 3</a></li>
+<li>Assignment three:<a HREF="file:///Users/Arsalan/malarsalan.github.io/mad-lib-improvement.html">week 4</a></li>
+<li>Assignment three:<a HREF="file:///Users/Arsalan/malarsalan.github.io/mad-lib-last.html">week 5</a></li>
+<li>Assignment three:<a HREF="file:///Users/Arsalan/malarsalan.github.io/javascript-week06/slideshow.html">week 6</a></li>
+<li>Assignment three:<a HREF="file:///Users/Arsalan/malarsalan.github.io/javascript-week06/resized_slideShow.html">week 7</a></li>
+<li>Assignment three:<a HREF="file:///Users/Arsalan/malarsalan.github.io/javascript-week06/API.html">week 8</a></li>
+<li>Short term project:<a HREF="https://twitter.com/shey_bot">twitter bot</a></li>
             
 </ul>
 </div>
